[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gmh-common"
authors = [
    {name = "Thijs Janssen", email = "thijs@seecr.nl"},
    {name = "Johan Jonkers", email = "johan@seecr.nl"},
]
description = "Common tools for GMH"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["gmh"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mysql-connector-python >= 9.3.0, < 10",
    "pytest >= 8.4.0, < 9",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "gmh_common/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.isort]
profile = "black"
